Added drag and drop script

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <div class="box_container">
             <h3>Tasks</h3>
             <div class="box">
-                <button class="task">Task 1</button>
-                <button class="task">Task 2</button>
-                <button class="task">Task 3</button>
-                <button class="task">Task 4</button>
-                <button class="task">Task 5</button>
-                <button class="task">Task 6</button>
-                <button class="task">Task 7</button>
-                <button class="task">Task 8</button>
-                <button class="task">Task 9</button>
-                <button class="task">Task 10</button>
-                <button class="task">Task 11</button>
-                <button class="task">Task 12</button>
-                <button class="task">Task 13</button>
-                <button class="task">Task 14</button>
-                <button class="task">Task 15</button>
+                <button id="task1" class="task" draggable="true">Task 1</button>
+                <button id="task2" class="task" draggable="true">Task 2</button>
+                <button id="task3" class="task" draggable="true">Task 3</button>
+                <button id="task4" class="task" draggable="true">Task 4</button>
+                <button id="task5" class="task" draggable="true">Task 5</button>
+                <button id="task6" class="task" draggable="true">Task 6</button>
+                <button id="task7" class="task" draggable="true">Task 7</button>
+                <button id="task8" class="task" draggable="true">Task 8</button>
+                <button id="task9" class="task" draggable="true">Task 9</button>
+                <button id="task10" class="task" draggable="true">Task 10</button>
+                <button id="task11" class="task" draggable="true">Task 11</button>
+                <button id="task12" class="task" draggable="true">Task 12</button>
+                <button id="task13" class="task" draggable="true">Task 13</button>
+                <button id="task14" class="task" draggable="true">Task 14</button>
+                <button id="task15" class="task" draggable="true">Task 15</button>
             </div>
         </div>
         <div class="users_boxes">
@@ -35,9 +35,6 @@
                 <h3>User 2</h3>
                 <div class="box">
                     <div class="user_tasks">
-                        <button class="task">Task 13</button>
-                        <button class="task">Task 14</button>
-                        <button class="task">Task 15</button>
                     </div>
                     <div class="user_numb">2</div>
                 </div>
@@ -60,6 +57,7 @@
             </div>
         </div>
     </div>
+    <script src="js/script.js"></script>
 </body> 
 </html>    
     
