--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             </div>
         </div>
         <div class="users_boxes">
-            <div class="box_container" id="user2">
+            <div div class="box_container" id="user2">
                 <h3>User 2</h3>
                 <div class="box">
                     <div class="user_numb">2</div>
                 </div>
             </div>
-            <div class="box_container" id="user1">
+            <div div class="box_container" id="user1">
                 <h3>User 1</h3>
                 <div class="box">
                     <div class="user_numb">1</div>
                 </div>
             </div>
-              <div class="box_container" id="user3">
+              <div div class="box_container" id="user3">
                 <h3>User 3</h3>
                 <div class="box">
                     <div class="user_numb">3</div>
