Changed few task content

--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <div class="box_container">
             <h3>Tasks</h3>
             <div class="box">
-                <button id="task1" class="task" draggable="true">Task 1</button>
-                <button id="task2" class="task" draggable="true">Task 2</button>
-                <button id="task3" class="task" draggable="true">Task 3</button>
-                <button id="task4" class="task" draggable="true">Task 4</button>
-                <button id="task5" class="task" draggable="true">Task 5</button>
-                <button id="task6" class="task" draggable="true">Task 6</button>
-                <button id="task7" class="task" draggable="true">Task 7</button>
-                <button id="task8" class="task" draggable="true">Task 8</button>
-                <button id="task9" class="task" draggable="true">Task 9</button>
-                <button id="task10" class="task" draggable="true">Task 10</button>
+                <button id="task1" class="task" draggable="true">Prepare a raport</button>
+                <button id="task2" class="task" draggable="true">Meeting with a client</button>
+                <button id="task3" class="task" draggable="true">Call to Mrs. Smith</button>
+                <button id="task4" class="task" draggable="true">Create a presentation</button>
+                <button id="task5" class="task" draggable="true">Organise a meeting</button>
+                <button id="task6" class="task" draggable="true">
+                Buy software</button>
+                <button id="task7" class="task" draggable="true">Find a solution for...</button>
+                <button id="task8" class="task" draggable="true">Write documentation</button>
+                <button id="task9" class="task" draggable="true">Create a meeting agenda</button>
+                <button id="task10" class="task" draggable="true">Add xx functionality</button>
                 <button id="task11" class="task" draggable="true">Task 11</button>
                 <button id="task12" class="task" draggable="true">Task 12</button>
                 <button id="task13" class="task" draggable="true">Task 13</button>
